@@ -143,6 +143,10 @@ static struct exttype {
     { ".txt",   "text/plain" },
     { ".xbm",   "image/x-xbitmap" },
     { ".xpm",   "image/x-xpixmap" },
+    { ".xht",   "application/xhtml+xml"},
+    { ".xhtml", "application/xhtml+xml"},
+    { ".xml",   "text/xml"},
+    { ".xsl",   "text/xml"},
     { ".vrml",  "x-world/x-vrml" },
     { ".wav",   "audio/x-wav" },
     { ".wrl",   "x-world/x-vrml" },
