@@ -1,3 +1,8 @@
+2003-08-08  Elizabeth Thomas <eathomas93@aol.com>
+
+	* nsd/mimetypes.c: 
+        * sample_config.tcl: Add support for xhtml mime type. (RFE #563417)
+
 2003-08-06  Elizabeth Thomas <eathomas93@aol.com>
 
 	* nsd/tclset.c: Fix ns_set split argument checking. (#757849)
